--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,17 +6,30 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="vertical container" id="search_container">
-    <div class="header" id="search_box_container">
-        <h3 id="search_header">Search</h3>
+<div class="vertical container" id="left_container">
+    <div class="header" id="search_header">
+        <h3>Search</h3>
         <input type="text" id="search_box" placeholder="search">
     </div>
+    <div class="animecontainer" id="results_container">
+
+    </div>
 </div>
-<div class="vertical container" id="list_container">
-    <h3 class="header">Your anime</h3>
+<div class="vertical container" id="middle_container">
+    <div class="header" id="anime_header">
+        <h3>Your anime</h3>
+    </div>
+    <div class="animecontainer" id="anime_container">
+
+    </div>
 </div>
-<div class="vertical container" id="suggestion_container">
-    <h3 class="header">Suggestions</h3>
+<div class="vertical container" id="right_container">
+    <div class="header" id="suggestion_header">
+        <h3>Suggestions</h3>
+    </div>
+    <div class="animecontainer" id="suggestion_container">
+
+    </div>
 </div>
 <script src="moe.js"></script>
 </body>
