--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="vertical container" id="left_container">
     <div class="header" id="search_header">
-        <h3>Search</h3>
+        <h3 id="search_title">Search</h3>
         <input type="text" id="search_box" placeholder="search">
     </div>
     <div class="animecontainer" id="results_container">
@@ -17,7 +17,7 @@
 </div>
 <div class="vertical container" id="middle_container">
     <div class="header" id="anime_header">
-        <h3>Your anime</h3>
+        <h3 class="title">Your anime</h3>
     </div>
     <div class="animecontainer" id="anime_container">
 
@@ -25,7 +25,7 @@
 </div>
 <div class="vertical container" id="right_container">
     <div class="header" id="suggestion_header">
-        <h3>Suggestions</h3>
+        <h3 class="title">Suggestions</h3>
     </div>
     <div class="animecontainer" id="suggestion_container">
 
